# libhangul

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Libhangul.sln  Makefile.am  NEWS  README  autogen.sh  config.h.cmake.in  configure.ac  hangul-config.cmake.in  libhangul.pc.in  libhangul.vcxproj
.github/workflows/: ccpp.yml
bindings/lua/: lua_hangul.c  test.lua
bindings/python/: pyhangul.c  setup.py  test_pyhangul.py
bindings/ruby/: extconf.rb  hangul.c  test-hangul.rb
data/: Makefile.am
data/hanja/: CMakeLists.txt  CREDITS  Makefile.am  freq-hanja.txt  hanja.txt  merge.py  mssymbol.py  mssymbol.txt  reverse.py
data/hanja/منصةشليله/: mssymbol.txt
data/keyboards/: CMakeLists.txt  Makefile.am  hangul-keyboard-2.xml.template  hangul-keyboard-2y.xml.template  hangul-keyboard-32.xml.template  hangul-keyboard-39.xml.template  hangul-keyboard-3f.xml.template  hangul-keyboard-3s.xml.template  hangul-keyboard-3y.xml.template  hangul-keyboard-ahn.xml.template  hangul-keyboard-ro.xml.template
data/keyboards/its/: hangul-keyboard.its  hangul-keyboard.loc
doc/: Doxyfile.in  Makefile  Makefile.am  gen_hangulkeyboards.py  mainpage.dox
hangul/: CMakeLists.txt  Makefile.am  hangul.h  hangulctype.c  hangulinputcontext.c  hangulinternals.h  hangulkeyboard.c  hangulkeyboard.h  hanja.c
po/: CMakeLists.txt  Makevars  POTFILES.in  ko.po
pyhangul/: dist.bat  pyhangul.c  setup.py  test_pyhangul.py
test/: CMakeLists.txt  Makefile.am  hangul.c  hanja.c  recursive.xml  test.c
tools/: CMakeLists.txt  Makefile.am  hangul.c
win32/: libhangul.rc
