
libhangulincludedir = $(includedir)/hangul-1.0
libhangulinclude_HEADERS = hangul.h

lib_LTLIBRARIES = libhangul.la

libhangul_la_CFLAGS =

libhangul_la_SOURCES = hangulctype.c \
		       hangulinputcontext.c \
		       hangulkeyboard.h

libhangul_la_LDFLAGS = -version-info $(LIBHANGUL_CURRENT):$(LIBHANGUL_REVISION):$(LIBHANGUL_AGE)
libhangul_la_LIBADD =
